Reformat and cleanup